// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartRange /> should edit 1`] = `
<ChartForm
  chart={
    Object {
      "attribute": "system.type",
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={true}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartRange /> should not render without an attribute 1`] = `
<ChartForm
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "range",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={false}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartRange /> should render properly 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 4px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-3:hover button svg {
  opacity: 1;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  padding: 6px;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg,
.emotion-5 .noop svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #808080;
}

.emotion-5 svg {
  opacity: 0;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-6 {
  width: 2px;
}

.emotion-8 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  height: 100%;
}

.emotion-9 .Loading {
  min-height: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-10>div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-10>div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-11 {
  text-transform: uppercase;
  font-family: Roboto Condensed;
  color: #b3b3b3;
  padding-bottom: 4px;
}

.emotion-12 {
  border: 1px solid #3b3b3b;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-21 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-23 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-23:hover,
.emotion-23.focus-visible:focus,
.emotion-23 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h3
          className="emotion-4"
        >
          source.filesize
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-6"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <div>
            <div
              className="emotion-11"
            >
              count
            </div>
            <div
              className="emotion-12"
            >
              -
            </div>
          </div>
          <div>
            <div
              className="emotion-11"
            >
              min
            </div>
            <div
              className="emotion-12"
            >
              180
            </div>
          </div>
          <div>
            <div
              className="emotion-11"
            >
              max
            </div>
            <div
              className="emotion-12"
            >
              8,525
            </div>
          </div>
          <div>
            <div
              className="emotion-11"
            >
              avg
            </div>
            <div
              className="emotion-12"
            >
              899.569
            </div>
          </div>
          <div>
            <div
              className="emotion-11"
            >
              sum
            </div>
            <div
              className="emotion-12"
            >
              521,750
            </div>
          </div>
          <div>
            <div
              className="emotion-21"
            >
               
            </div>
            <div
              className="emotion-22"
            >
              <button
                aria-label="Add Filter"
                className="emotion-23"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-24"
                >
                  <div
                    className="emotion-25"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                  Add Filter
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartRange /> should render properly without data 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 4px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-3:hover button svg {
  opacity: 1;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  padding: 6px;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg,
.emotion-5 .noop svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #808080;
}

.emotion-5 svg {
  opacity: 0;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-6 {
  width: 2px;
}

.emotion-8 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  height: 100%;
}

.emotion-9 .Loading {
  min-height: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-10>div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-10>div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-11 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13:hover,
.emotion-13.focus-visible:focus,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h3
          className="emotion-4"
        >
          source.filesize
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-6"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <div>
            <div
              className="emotion-11"
            >
               
            </div>
            <div
              className="emotion-12"
            >
              <button
                aria-label="Add Filter"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                  Add Filter
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
